--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "dependencies": {
     "fs": "0.0.1-security",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "3.1.7"
   }
 }
