--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "fs": "0.0.1-security",
-    "express": "^4.17.1"
+    "serialport": "^12.0.0"
   },
   "devDependencies": {
     "nodemon": "3.1.7"
