--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "firebase-admin": "^12.6.0",
     "fs": "0.0.1-security",
     "serialport": "^12.0.0"
   },
